; ModuleID = '/home/carl/AnghaBench/openssl/crypto/extr_initthread.c_get_global_tevent_register.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/extr_initthread.c_get_global_tevent_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@tevent_register_runonce = common dso_local global i32 0, align 4
@create_global_tevent_register = common dso_local global i32 0, align 4
@glob_tevent_reg = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* ()* @get_global_tevent_register to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_global_tevent_register() #0 {
  %1 = alloca i32*, align 8
  %2 = load i32, i32* @create_global_tevent_register, align 4
  %3 = call i32 @RUN_ONCE(i32* @tevent_register_runonce, i32 %2)
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %0
  store i32* null, i32** %1, align 8
  br label %8

6:                                                ; preds = %0
  %7 = load i32*, i32** @glob_tevent_reg, align 8
  store i32* %7, i32** %1, align 8
  br label %8

8:                                                ; preds = %6, %5
  %9 = load i32*, i32** %1, align 8
  ret i32* %9
}

declare dso_local i32 @RUN_ONCE(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
